# recrypt-wasm-binding

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  build.js  fixBindgenShim.js  flake.nix  package.json  recrypt_wasm_binding.d.ts  rust-toolchain.toml  tsconfig.json  webpack.config.js
.github/: CODEOWNERS  dependabot.yml  rust-ci-patch.yaml  rust-daily-patch.yaml  typescript-ci-patch.yaml  update-workflows-patch.yaml
.github/workflows/: bump-version.yaml  publish.yaml  rust-cargo-update.yaml  rust-ci.yaml  rust-daily.yaml  test-examples.yaml  typescript-ci.yaml  update-workflows.yaml  wasm-ci.yaml
benchmark/: computePublicKey.ts  decryptLevelOne.ts  decryptLevelTwo.ts  decryptLevelZero.ts  deriveSymmetricKey.ts  encrypt.ts  generateEd25519KeyPair.ts  generateKeyPair.ts  generatePlaintext.ts  generateTransformKey.ts  index.ts  pbkdf2SHA256.ts  transformLevelOne.ts  transformLevelTwo.ts
examples/create-react-app-example/: README.md  craco.config.js  package-lock.json  package.json
examples/create-react-app-example/src/: App.css  App.js
lib/: Api256Shim.ts
lib/tests/: Api256Shim.test.ts
src/: api256.rs  lib.rs  util.rs
tests/: testRunner.js
