[package]
name = "recrypt-wasm-binding"
version = "0.6.62-pre"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
description = "Bindings to run recrypt-rs as a WebAssembly module."
license = "AGPL-3.0-only"
repository = "https://github.com/IronCoreLabs/recrypt-wasm-binding"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["wasm-bindgen"] }
gloo-utils = { version = "0.2", features = ["serde"] }
ironcore-search-helpers = "0.2"
js-sys = "0.3"
rand = "0.8"
rand_chacha = "0.9"
recrypt = { version = "0.14", features = ["wasm"], default-features = false }
serde = "1"
serde_derive = "1"
wasm-bindgen = { version = "=0.2.100" }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
