[package]
name = "recrypt-wasm-binding"
version = "0.7.3-pre"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
description = "Bindings to run recrypt-rs as a WebAssembly module."
license = "AGPL-3.0-only"
repository = "https://github.com/IronCoreLabs/recrypt-wasm-binding"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
digest = "0.11"
getrandom = { version = "0.4", features = ["wasm_js"] }
gloo-utils = { version = "0.2", features = ["serde"] }
ironcore-search-helpers = "0.4"
js-sys = "0.3"
rand = "0.10"
rand_chacha = "0.10"
recrypt = { version = "0.16", features = ["wasm"], default-features = false }
serde = "1"
serde_derive = "1"
# Must be kept in-sync with build.js and GitHub workflows
wasm-bindgen = { version = "=0.2.108" }

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
